--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ form {
     font-weight: bold;
     border-bottom: 1px solid #ccc;
     background-color: rgb(110, 114, 110);
+    align-items: center;
   }
   
   .encabezado-celda {
@@ -78,4 +79,26 @@ form {
     flex: 1;
     padding: 5px;
     text-align: center;
+  }
+
+  button.encabezado-celda, .borrar-btn{
+    flex:.15;
+    background-color: #dc3545;
+    color: white;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 3px;
+    cursor: pointer;
+    font-size: 14px;
+  }
+
+  .borrar-btn{
+    flex:.05;
+    font-weight: bold;
+    border-radius:50%;
+    margin-right: 1.5%;  
+  }
+
+  .tot-esp{
+    flex:.15;
   }
